--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Summary_break_activity"></activity>
+        <activity android:name=".Summary_break_activity" />
+        <activity android:name=".Break_detail_activity"></activity>
     </application>
 
 </manifest>
