--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Summary_break_activity" />
-        <activity android:name=".Break_detail_activity"></activity>
+        <activity android:name=".Break_detail_activity" />
+        <activity android:name=".Order_bill_activity"></activity>
     </application>
 
 </manifest>
