--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,12 @@
         </activity>
         <activity android:name=".Summary_break_activity" />
         <activity android:name=".Break_detail_activity" />
-        <activity android:name=".Order_bill_activity"></activity>
+        <activity android:name=".Order_bill_activity" />
+        <activity android:name=".Normal_type_activity" />
+        <activity android:name=".Addon_type_activity" />
+        <activity android:name=".Pie_type_activity" />
+        <activity android:name=".Softcake_type_activity" />
+        <activity android:name=".Kitchen_type_activity"></activity>
     </application>
 
 </manifest>
